--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,27 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+  # flutter_launcher_icons: Create icon launcher for flutter app
+  flutter_launcher_icons: ^0.9.2
+  # flutter_native_splash: Create splash screen for app
+  flutter_native_splash: ^1.2.3
 
-# The following section is specific to Flutter.
+
+
+flutter_icons:
+  image_path: "assets/images/logo/logo.png"
+  android: true
+  ios: true
+  adaptive_icon_background: "#FFFFFF"
+  remove_alpha_ios: true
+
+flutter_native_splash:
+  color: "#EB6D2F"
+  image: assets/images/logo/logo_name.png
+  android: true
+  ios: true
+
+
 flutter:
 
   # The following line ensures that the Material Icons font is
@@ -49,8 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/logo/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
