--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   equatable: ^2.0.3
   http: ^0.13.3
   dio: ^4.0.0
+  dartz: ^0.10.0
+  get_it: ^7.2.0
+  google_fonts: ^2.1.0
+  flutter_bloc: ^7.2.0
 
 
 dev_dependencies:
