--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   google_fonts: ^2.1.0
   flutter_bloc: ^7.2.0
 
+  #  multi-screen size adjustment
+  flutter_screenutil: ^5.0.0+2
+  # svg file support
+  flutter_svg: ^0.22.0
+  cached_network_image: ^3.1.0
+
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +78,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/logo/
+    - assets/svgs/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
