--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,13 @@ dependencies:
     sdk: flutter
   wiredash: ^0.7.0+1
   youtube_player_flutter: ^8.0.0
+  hive: ^2.0.4
+  path_provider: ^2.0.4
 
 
 dev_dependencies:
+  hive_generator:
+  build_runner:
   flutter_test:
     sdk: flutter
 
