--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   hive: ^2.0.4
   path_provider: ^2.0.4
   flare_flutter: ^3.0.2
+  firebase_core: ^1.7.0
+  firebase_auth: ^3.1.3
+  google_sign_in: ^5.1.1
 
 
 dev_dependencies:
